--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,16 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="BDE PSH">
 
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="/BDE-PSH-SUP/public/manifest-public.json">
   <title>BDE PSH SUP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+  <!-- Icons -->
+  <link rel="apple-touch-icon" href="/BDE-PSH-SUP/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/BDE-PSH-SUP/icons/icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/BDE-PSH-SUP/icons/icon-512.png">
 </head>
 <body>
 
