--- a/public/index.html
+++ b/public/index.html
@@ -45,29 +45,9 @@
 /* ===============================
    🔗 SUPABASE
 =============================== */
-const supabaseUrl = 'https://yswqdhoscahtylemhipt.supabase.co';
-const supabaseKey = 'TA_CLE_ANON'; // garde ta clé anon ici
-
+const supabaseUrl = "https://yswqdhoscahtylemhipt.supabase.co";
+const supabaseKey = "TA_CLE_ANON";
 const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
-
-/* ===============================
-   📲 INSTALL PWA
-=============================== */
-let deferredPrompt;
-const installBtn = document.getElementById("installBtn");
-
-window.addEventListener("beforeinstallprompt", (e) => {
-  e.preventDefault();
-  deferredPrompt = e;
-  installBtn.style.display = "block";
-});
-
-installBtn.addEventListener("click", async () => {
-  deferredPrompt.prompt();
-  await deferredPrompt.userChoice;
-  deferredPrompt = null;
-  installBtn.style.display = "none";
-});
 
 /* ===============================
    🔔 NOTIFICATIONS
@@ -75,38 +55,37 @@ installBtn.addEventListener("click", async () => {
 const notifBtn = document.getElementById("notifBtn");
 
 notifBtn.addEventListener("click", async () => {
-  const permission = await Notification.requestPermission();
+  if (!("serviceWorker" in navigator)) {
+    alert("Service Worker non supporté");
+    return;
+  }
 
+  const permission = await Notification.requestPermission();
   if (permission !== "granted") {
     alert("Notifications refusées ❌");
     return;
   }
 
   const registration = await navigator.serviceWorker.ready;
+
+  const vapidPublicKey = "BGflyhuu28Pgue8ZjnLIJLBjm3cVStbDHU2DQ08Khw_LuduY10nBOTlidcFnVZ7jRvm8IZQexMeS1Ip3NSofi6U";
+
   const subscription = await registration.pushManager.subscribe({
     userVisibleOnly: true,
-    applicationServerKey: "TA_CLE_VAPID_PUBLIQUE"
+    applicationServerKey: vapidPublicKey
   });
 
   const { error } = await supabaseClient
     .from("push_subscriptions")
-    .insert([{ subscription: subscription }]);
+    .insert([{ subscription }]);
 
   if (error) {
     console.error(error);
-    alert("Erreur enregistrement notification");
+    alert("❌ Erreur enregistrement notification");
   } else {
-    alert("Notifications activées ✅");
+    alert("🔔 Notifications activées !");
   }
 });
-
- 
-if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("/BDE-PSH-SUP/sw-public.js")
-    .then(reg => console.log("SW public enregistré", reg))
-    .catch(err => console.error("Erreur SW", err));
-}
-
 </script>
 
 </body>
