--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link rel="manifest" href="/BDE-PSH-SUP/public/manifest-public.json">
   <title>BDE PSH SUP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/BDE-PSH6SUP/style.css">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <!-- Icons -->
