--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
 
   <!-- PWA -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,7 +13,8 @@
   <link rel="manifest" href="/BDE-PSH-SUP/public/manifest-public.json">
   <title>BDE PSH SUP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/BDE-PSH6SUP/style.css">
+
+  <link rel="stylesheet" href="/BDE-PSH-SUP/style.css">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <!-- Icons -->
@@ -31,7 +31,7 @@
 
 <main class="admin-grid">
 
-  <button id="installBtn" class="btn-primary" style="display:none;">
+  <button id="installBtn" class="btn-primary hidden">
     📲 Installer l’application
   </button>
 
@@ -41,6 +41,10 @@
 
 </main>
 
+<footer class="footer">
+  <p>BDE PSH SUP ©</p>
+</footer>
+
 <script>
 /* ===============================
    🔗 SUPABASE
@@ -48,6 +52,34 @@
 const supabaseUrl = "https://yswqdhoscahtylemhipt.supabase.co";
 const supabaseKey = "TA_CLE_ANON";
 const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+
+/* ===============================
+   📲 SERVICE WORKER
+=============================== */
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("/BDE-PSH-SUP/sw-public.js")
+    .then(reg => console.log("SW public enregistré", reg))
+    .catch(err => console.error("Erreur SW", err));
+}
+
+/* ===============================
+   📲 INSTALL PWA
+=============================== */
+let deferredPrompt;
+const installBtn = document.getElementById("installBtn");
+
+window.addEventListener("beforeinstallprompt", (e) => {
+  e.preventDefault();
+  deferredPrompt = e;
+  installBtn.classList.remove("hidden");
+});
+
+installBtn.addEventListener("click", async () => {
+  deferredPrompt.prompt();
+  await deferredPrompt.userChoice;
+  deferredPrompt = null;
+  installBtn.classList.add("hidden");
+});
 
 /* ===============================
    🔔 NOTIFICATIONS
