--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="BDE PSH">
 
-  <link rel="manifest" href="manifest-public.json">
+  <link rel="manifest" href="/BDE-PSH-SUP/public/manifest-public.json">
 
   <title>BDE PSH SUP – Accueil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/BDE-PSH-SUP/public/style.css">
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
