--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,30 @@
-<!DOCTYPE html>
-<html lang="fr">
+<!DOCTYPE html> 
+<html lang="fr"> 
 <head>
-  <meta charset="UTF-8">
+<meta charset="UTF-8"> 
 
   <!-- PWA -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="#b23a2c">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="BDE PSH">
-
-  <link rel="manifest" href="/BDE-PSH-SUP/public/manifest-public.json">
-
-  <title>BDE PSH SUP – Accueil</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta name="apple-mobile-web-app-capable" content="yes"> 
+  <meta name="mobile-web-app-capable" content="yes"> 
+  <meta name="theme-color" content="#b23a2c"> 
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> 
+  <meta name="apple-mobile-web-app-title" content="BDE PSH"> 
+  <link rel="manifest" href="manifest-public.json"> 
+  
+  <title>BDE PSH SUP</title> 
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  
   <!-- CSS -->
   <link rel="stylesheet" href="/BDE-PSH-SUP/public/style.css">
-
+  
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
+  
   <!-- Icons -->
-  <link rel="apple-touch-icon" href="../icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="../icons/icon-192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="../icons/icon-512.png">
+  <link rel="apple-touch-icon" href="../icons/apple-touch-icon.png"> 
+  <link rel="icon" type="image/png" sizes="192x192" href="../icons/icon-192.png"> 
+  <link rel="icon" type="image/png" sizes="512x512" href="../icons/icon-512.png"> 
+
 </head>
 <body>
 
