--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   
   <!-- CSS -->
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
   
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   
