--- a/public/index.html
+++ b/public/index.html
@@ -57,10 +57,12 @@
     </a>
 
     <!-- 🔔 Notifications -->
-    <button id="notifBtn" class="card">
-      <span>🔔</span>
-      <h2>Notifications</h2>
-    </button>
+<div class="notif-bar">
+  <button id="notifBtn" class="btn-notif">
+    🔔 Activer les notifications
+  </button>
+</div>
+
 
     <!-- 📲 Installer -->
     <button id="installBtn" class="card hidden">
