--- a/public/campus.html
+++ b/public/campus.html
@@ -59,7 +59,8 @@
    🔐 SUPABASE (PUBLIC READ)
 =============================== */
 const supabaseUrl = 'https://yswqdhoscahtylemhipt.supabase.co';
-const supabaseKey = 'TA_CLE_ANON';
+const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlzd3FkaG9zY2FodHlsZW1oaXB0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgwNjQyNTEsImV4cCI6MjA4MzY0MDI1MX0.KZjNonkx8OVrikFFbb378-Q5h92yLaJLR23pngpInbI";
+
 
 const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
 
