--- a/public/index.html
+++ b/public/index.html
@@ -99,9 +99,10 @@
 /* ===============================
    📋 CONTACT
 =============================== */
-document.getElementById('contactBde').addEventListener('click', () => {
-  window.location.href = 'contact-bde.html';
-});
+document.getElementById('contactBde').onclick = () => {
+  window.location.href = "mailto:bdepshsup@passy-st-honore.com";
+};
+
 
 /* ===============================
    🔗 SUPABASE
