--- a/public/evenements.html
+++ b/public/evenements.html
@@ -156,8 +156,9 @@ loadEvents();
    📋 CONTACT
 =============================== */
 document.getElementById('contactBde').onclick = () => {
-  location.href = 'contact-bde.html';
+  window.location.href = "mailto:bdepshsup@passy-st-honore.com";
 };
+
 
 /* ===============================
    🔧 SERVICE WORKER
