--- a/public/campus.html
+++ b/public/campus.html
@@ -125,8 +125,9 @@ loadCampus();
    📋 CONTACT
 =============================== */
 document.getElementById('contactBde').onclick = () => {
-  location.href = 'contact-bde.html';
+  window.location.href = "mailto:bdepshsup@passy-st-honore.com";
 };
+
 
 /* ===============================
    🔧 SERVICE WORKER
