--- a/public/bde.html
+++ b/public/bde.html
@@ -159,9 +159,10 @@ loadBDE();
 /* ===============================
    📋 CONTACT
 =============================== */
-document.getElementById('contactBde').addEventListener('click', () => {
-  window.location.href = 'contact-bde.html';
-});
+document.getElementById('contactBde').onclick = () => {
+  window.location.href = "mailto:bdepshsup@passy-st-honore.com";
+};
+
 
 /* ===============================
    🔧 SERVICE WORKER
