--- a/public/actus.html
+++ b/public/actus.html
@@ -193,9 +193,9 @@ loadActus();
 /* ===============================
    📋 CONTACT
 =============================== */
-document.getElementById('contactBde').addEventListener('click', () => {
-  window.location.href = 'contact-bde.html';
-});
+document.getElementById('contactBde').onclick = () => {
+  window.location.href = "mailto:bdepshsup@passy-st-honore.com";
+};
 
 /* ===============================
    🔧 SERVICE WORKER
