--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,8 @@
 
 <!-- Bouton contact flottant -->
 <button id="contactBde" class="btn-contact-floating">✉️</button>
+  <!-- Bouton appli campus -->
+<button id="campusAppBtn" class="btn-campus-floating">🏫</button>
 
 <script>
 /* ===============================
@@ -103,6 +105,12 @@ document.getElementById('contactBde').onclick = () => {
   window.location.href = "mailto:bdepshsup@passy-st-honore.com";
 };
 
+/* ===============================
+   APPLI VIE CAMPUS
+=============================== */
+document.getElementById('campusAppBtn').onclick = () => {
+  window.location.href = "https://scolaritepshsup.github.io/PSH-SUP/public/index.html";
+};
 
 /* ===============================
    🔗 SUPABASE
