--- a/public/campus.html
+++ b/public/campus.html
@@ -128,6 +128,12 @@ document.getElementById('contactBde').onclick = () => {
   window.location.href = "mailto:bdepshsup@passy-st-honore.com";
 };
 
+  /* ===============================
+   APPLI VIE CAMPUS
+=============================== */
+document.getElementById('campusAppBtn').onclick = () => {
+  window.location.href = "https://scolaritepshsup.github.io/PSH-SUP/public/index.html";
+};
 
 /* ===============================
    🔧 SERVICE WORKER
