--- a/public/campus.html
+++ b/public/campus.html
@@ -54,6 +54,9 @@
 
 <button id="contactBde" class="btn-contact-floating">✉️</button>
 
+  <!-- Bouton appli campus -->
+<button id="campusAppBtn" class="btn-campus-floating">🏫</button>
+
 <script>
 /* ===============================
    🔐 SUPABASE (PUBLIC READ)
