--- a/public/actus.html
+++ b/public/actus.html
@@ -58,6 +58,9 @@
 
 <button id="contactBde" class="btn-contact-floating">✉️</button>
 
+  <!-- Bouton appli campus -->
+<button id="campusAppBtn" class="btn-campus-floating">🏫</button>
+
 <script>
 /* ===============================
    🔐 SUPABASE CONFIG (PUBLIC)
@@ -195,6 +198,13 @@ loadActus();
 =============================== */
 document.getElementById('contactBde').onclick = () => {
   window.location.href = "mailto:bdepshsup@passy-st-honore.com";
+};
+
+  /* ===============================
+   APPLI VIE CAMPUS
+=============================== */
+document.getElementById('campusAppBtn').onclick = () => {
+  window.location.href = "https://scolaritepshsup.github.io/PSH-SUP/public/index.html";
 };
 
 /* ===============================
