--- a/public/actus.html
+++ b/public/actus.html
@@ -197,7 +197,7 @@ loadActus();
    📋 CONTACT
 =============================== */
 document.getElementById('contactBde').onclick = () => {
-  window.location.href = "mailto:bdepshsup@passy-st-honore.com";
+  window.location.href = "mailto:bde.pshsup@passy-st-honore.com";
 };
 
   /* ===============================
