--- a/public/bde.html
+++ b/public/bde.html
@@ -163,7 +163,7 @@ loadBDE();
    📋 CONTACT
 =============================== */
 document.getElementById('contactBde').onclick = () => {
-  window.location.href = "mailto:bdepshsup@passy-st-honore.com";
+  window.location.href = "mailto:bde.pshsup@passy-st-honore.com";
 };
 
   /* ===============================
