--- a/public/campus.html
+++ b/public/campus.html
@@ -128,7 +128,7 @@ loadCampus();
    📋 CONTACT
 =============================== */
 document.getElementById('contactBde').onclick = () => {
-  window.location.href = "mailto:bdepshsup@passy-st-honore.com";
+  window.location.href = "mailto:bde.pshsup@passy-st-honore.com";
 };
 
   /* ===============================
