--- a/public/evenements.html
+++ b/public/evenements.html
@@ -159,7 +159,7 @@ loadEvents();
    📋 CONTACT
 =============================== */
 document.getElementById('contactBde').onclick = () => {
-  window.location.href = "mailto:bdepshsup@passy-st-honore.com";
+  window.location.href = "mailto:bde.pshsup@passy-st-honore.com";
 };
 
 /* ===============================
