--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
    📋 CONTACT
 =============================== */
 document.getElementById('contactBde').onclick = () => {
-  window.location.href = "mailto:bdepshsup@passy-st-honore.com";
+  window.location.href = "mailto:bde.pshsup@passy-st-honore.com";
 };
 
 /* ===============================
