--- a/public/index.html
+++ b/public/index.html
@@ -148,35 +148,64 @@ installBtn.addEventListener("click", async () => {
 });
 
 /* ===============================
-   🔔 NOTIFICATIONS
+   🔔 NOTIFICATIONS (CORRIGÉ)
 =============================== */
+
+function urlBase64ToUint8Array(base64String) {
+  const padding = '='.repeat((4 - base64String.length % 4) % 4);
+  const base64 = (base64String + padding)
+    .replace(/-/g, '+')
+    .replace(/_/g, '/');
+
+  const rawData = atob(base64);
+  const outputArray = new Uint8Array(rawData.length);
+
+  for (let i = 0; i < rawData.length; ++i) {
+    outputArray[i] = rawData.charCodeAt(i);
+  }
+  return outputArray;
+}
+
 const notifBtn = document.getElementById("notifBtn");
 
 notifBtn.addEventListener("click", async () => {
-  const permission = await Notification.requestPermission();
-  if (permission !== "granted") {
-    alert("Notifications refusées ❌");
-    return;
-  }
+  try {
+    console.log("Demande permission…");
 
-  const registration = await navigator.serviceWorker.ready;
+    const permission = await Notification.requestPermission();
+    if (permission !== "granted") {
+      alert("Notifications refusées ❌");
+      return;
+    }
 
-  const vapidPublicKey = "BGflyhuu28Pgue8ZjnLIJLBjm3cVStbDHU2DQ08Khw_LuduY10nBOTlidcFnVZ7jRvm8IZQexMeS1Ip3NSofi6U";
+    console.log("Permission OK");
 
-  const subscription = await registration.pushManager.subscribe({
-    userVisibleOnly: true,
-    applicationServerKey: vapidPublicKey
-  });
+    const registration = await navigator.serviceWorker.ready;
 
-  const { error } = await supabaseClient
-    .from("push_subscriptions")
-    .insert([{ subscription }]);
+    const vapidPublicKey =
+      "BGflyhuu28Pgue8ZjnLIJLBjm3cVStbDHU2DQ08Khw_LuduY10nBOTlidcFnVZ7jRvm8IZQexMeS1Ip3NSofi6U";
 
-  if (error) {
-    console.error(error);
-    alert("❌ Erreur enregistrement notification");
-  } else {
-    alert("🔔 Notifications activées !");
+    const subscription = await registration.pushManager.subscribe({
+      userVisibleOnly: true,
+      applicationServerKey: urlBase64ToUint8Array(vapidPublicKey)
+    });
+
+    console.log("Subscription:", subscription);
+
+    const { error } = await supabaseClient
+      .from("push_subscriptions")
+      .insert([{ subscription }]);
+
+    if (error) {
+      console.error("Erreur Supabase:", error);
+      alert("❌ Erreur enregistrement notification");
+    } else {
+      alert("🔔 Notifications activées !");
+    }
+
+  } catch (err) {
+    console.error("Erreur notifications:", err);
+    alert("Erreur lors de l’activation des notifications");
   }
 });
 </script>
