--- a/public/bde.html
+++ b/public/bde.html
@@ -70,9 +70,8 @@
 /* ===============================
    🔐 SUPABASE – PUBLIC READ
 =============================== */
-const supabaseUrl = 'https://yswqdhoscahtylemhipt.supabase.co';
-const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlzd3FkaG9zY2FodHlsZW1oaXB0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgwNjQyNTEsImV4cCI6MjA4MzY0MDI1MX0.KZjNonkx8OVrikFFbb378-Q5h92yLaJLR23pngpInbI";
-
+const supabaseUrl = "https://yswqdhoscahtylemhipt.supabase.co";
+const supabaseKey = "sb_publishable_aU9yS4K5HzDpqB9M5u1vuw_FVTwz9sf";
 
 const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
 
