--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,8 @@ document.getElementById('campusAppBtn').onclick = () => {
    🔗 SUPABASE
 =============================== */
 const supabaseUrl = "https://yswqdhoscahtylemhipt.supabase.co";
-const supabaseKey = "TA_CLE_ANON";
+const supabaseKey = "sb_publishable_aU9yS4K5HzDpqB9M5u1vuw_FVTwz9sf";
+
 const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
 
 /* ===============================
